# dawu-agent

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml  web_entry.py
.github/workflows/: ci.yml
config/: development.yaml  production.yaml
config/agents/: data_analyst.md
config/agents/roles/: analyst.md  data_engineer.md  report_writer.md
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
skills/: __init__.py  example_skill.py
src/dawu_agent/: __init__.py
src/dawu_agent/cli/: __init__.py  main.py
src/dawu_agent/config/: __init__.py  loader.py
src/dawu_agent/context/: __init__.py  compression.py  memory.py
src/dawu_agent/core/: __init__.py  agent.py  events.py  session.py  state.py
src/dawu_agent/dspy_integration/: __init__.py  dataset.py  lm_bridge.py  metrics.py  modules.py  optimizer.py  signatures.py  tool_adapter.py
src/dawu_agent/llm/: __init__.py  base.py  factory.py  retry.py  router.py  token_counter.py
src/dawu_agent/llm/providers/: __init__.py  anthropic.py  openai.py
src/dawu_agent/multi/: __init__.py  coordinator.py  sub_agent.py
src/dawu_agent/observability/: __init__.py  telemetry.py
src/dawu_agent/security/: __init__.py  audit.py  hooks.py  permissions.py  sandbox.py
src/dawu_agent/server/: __init__.py  app.py
src/dawu_agent/tools/: __init__.py  base.py  registry.py  skill_loader.py  skill_tool.py
src/dawu_agent/tools/builtin/: __init__.py  code_execute_tool.py  data_tools.py  file_tools.py  search_tools.py  time_aware_hook.py
src/dawu_agent/tools/mcp/: __init__.py  adapter.py
tests/: test_agent.py  test_compression.py  test_config.py  test_security.py  test_telemetry.py
