[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dawu-agent"
version = "0.1.0"
description = "Enterprise-grade AI Agent platform for data analysis and report generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dawu Team"}
]
keywords = ["agent", "ai", "llm", "data-analysis", "mcp", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies grouped by function
# LLM Clients
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "httpx[http2]>=0.27.0",

    # Config & Validation
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # CLI & TUI
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.45,<4.0.0",

    # Observability
    "opentelemetry-api>=1.25.0,<2.0.0",
    "opentelemetry-sdk>=1.25.0,<2.0.0",
    "opentelemetry-instrumentation>=0.46b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.46b0,<1.0.0",
    "opentelemetry-exporter-otlp>=1.25.0,<2.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "structlog>=24.1.0,<26.0.0",

    # Database & Memory
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "alembic>=1.13.0,<2.0.0",

    # Vector Database (for memory)
    "chromadb>=0.5.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0,<2.0.0",

    # Server
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",

    # Security & Sandbox
    "cryptography>=42.0.0",

    # Data Analysis (specific to user's use case)
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0,<4.0.0",

    # DSPy (declarative LLM programming & optimization)
    "dspy>=3.0.0",

    # Utilities
    "tenacity>=8.3.0",
    "jinja2>=3.1.4,<4.0.0",
    "aiofiles>=23.2.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "nox>=2024.4.0",
]

[project.scripts]
dawu = "dawu_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dawu_agent"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
